# dict-rs

./: Cargo.toml  README.md
src/: main.rs
src/youdao/: mod.rs
