[package]
name = "dict-rs"
version = "0.1.0"
authors = ["Yukang <moorekang@gmail.com>"]
edition = "2018"

[dependencies]
hyper = "0.12"

# The core APIs, including the Serialize and Deserialize traits. Always
# required when using Serde. The "derive" feature is only required when
# using #[derive(Serialize, Deserialize)] to make Serde work with structs
# and enums defined in your crate.
serde = { version = "1.0", features = ["derive"] }

# Each data format lives in its own crate; the sample code below uses JSON
# but you may be using a different one.
serde_json = "1.0"


url = "1.5.1"